err/ddbgraphite.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ddbgraphite'...
Compiling './lib/python3.5/site-packages/ddbgraphite/listen.py'...
***   File "./lib/python3.5/site-packages/ddbgraphite/listen.py", line 18
    print data.split()[0], data.split()[1]
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ddbgraphite-0.0.8.egg-info'...
Listing './lib/python3.5/site-packages/ddbpy'...
Compiling './lib/python3.5/site-packages/ddbpy/client.py'...
***   File "./lib/python3.5/site-packages/ddbpy/client.py", line 29
    print "closing socket"
                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ddbpy-0.0.4.egg-info'...
Listing './lib/python3.5/site-packages/nose'...
Listing './lib/python3.5/site-packages/nose/ext'...
Listing './lib/python3.5/site-packages/nose/plugins'...
Listing './lib/python3.5/site-packages/nose/sphinx'...
Listing './lib/python3.5/site-packages/nose/tools'...
Listing './lib/python3.5/site-packages/nose-1.3.7.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/test'...
Compiling './lib/python3.5/site-packages/test/__init__.py'...
Compiling './lib/python3.5/site-packages/test/listen.py'...
***   File "./lib/python3.5/site-packages/test/listen.py", line 20
    print "received data:", binascii.hexlify(packet)
                         ^
SyntaxError: invalid syntax

Listing './man'...
Listing './man/man1'...
Listing './share'...
Listing './share/python-wheels'...
